index page added
index page added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="project2.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
     </header>
@@ -43,7 +43,7 @@ At Captains Gym, we provide a motivating and energizing environment to help you 
              <li>World class equipments</li>
         </ul>
 
-<a href="project3.html" class="memform">JOIN OUR GYM!!</a>
+<a href="form.html" class="memform">JOIN OUR GYM!!</a>
     </section>
 
     <section id="contact">
