gallery page added
gallery page added

--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@ Gallery
  <nav>
 <ul>
 <li>
-           <a href="project1.html">HOME</a>
+           <a href="index.html">HOME</a>
 </li>
 </ul>
 </nav>
