form page added
form page added

--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@ style="margin-right: 200px;
 <nav align="center">
 <ul>
 <li>
-           <a href="project1.html">HOME</a>
+           <a href="index.html">HOME</a>
 </li>
 </ul>
 </nav>
